--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.5.5",
+    "@types/d3-color": "^3.1.3",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
