--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "vite_react_shadcn_ts",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  {
+    "name": "rf-meter",
+    "version": "0.0.0",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "deploy": "./deploy.sh",
+      
+
   "dependencies": {
     "@capacitor/core": "^6.1.2",
     "@capacitor/device": "^6.0.1",
