--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-
   "dependencies": {
     "@capacitor/core": "^6.1.2",
     "@capacitor/device": "^6.0.1",
@@ -51,9 +50,11 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "github": "^14.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
+    "pages": "^0.0.16",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
