--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,10 +21,10 @@
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": false,
 
-    "baseUrl": "/rf-meter/",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/* "]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["src","dist"]
+  "include": ["src"]
 }
